# griotte-lib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.OLD  Doxyfile  PREFIX  README.md  REFERENCES.md  gui-framework-for-cxx.md  library.cmake  pfs-griotte.kdev4
2ndparty/: CMakeLists.txt
demo/: Application.hpp  CMakeLists.txt  fps_counter.hpp
demo/glfw/: Application.hpp  CMakeLists.txt
demo/glfw-lesson01/: main.cpp
demo/glfw-lesson02/: main.cpp
demo/glfw-lesson03-FPS/: main.cpp
demo/glfw-lesson06-Shader/: main.cpp
demo/glfw-lesson07-Text/: main.cpp
demo/glfw/glfw-lesson01/: main.cpp
demo/glfw/glfw-lesson04-Monitor/: main.cpp
demo/glfw/glfw-lesson05-FontInfo/: main.cpp
demo/glfw/glfw-lesson07-Text/: main.cpp
demo/plutovg/: CMakeLists.txt
demo/sdl2/: CMakeLists.txt  main.cpp
demo/sfml/: CMakeLists.txt  anchors_layout.cpp  fixed_layout.cpp  main.cpp  palette.cpp  scale.cpp  text_input.cpp
include/pfs/griotte/: align.hpp  anchors_layout.hpp  bordered.hpp  brush_style.hpp  button.hpp  circle.hpp  color.hpp  config.hpp  constants.hpp  context.hpp  direction.hpp  error.hpp  fixed_layout.hpp  font.hpp  font_style.hpp  fontstyle.hpp  glyph.hpp  griotte_impl.hpp  image.hpp  indents.hpp  item.hpp  label.hpp  layout.hpp  line.hpp  linear_layout.hpp  logger.hpp  math.hpp  node.hpp  outlined.hpp  painter.hpp  path.hpp  pen.hpp  pen_style.hpp  point.hpp  rect.hpp  rectangle.hpp  renderer.hpp  stroke.hpp  stroker.hpp  text.hpp  (+4 more)
include/pfs/griotte/SDL2/: gui.hpp
include/pfs/griotte/SFML/: config.hpp  font.hpp  text.hpp  ui.hpp
include/pfs/griotte/legacy/: ellipse.hpp  font.hpp  glyph.hpp  line.hpp  noncopyable.hpp  path.hpp  pen_style.hpp  rect.hpp  view.hpp
include/pfs/griotte/legacy/painter/: qt.hpp
include/pfs/griotte/painter/: qt.hpp
include/pfs/math/: round.hpp
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  Surface.cpp  Surface.hpp  anchors_layout.cpp  circle.cpp  fixed_layout.cpp  layout.cpp  linear_layout.cpp  logger.cpp  main.cpp  node.cpp
src/SDL2/: gui.cpp
src/SFML/: RoundedRectangleShape.cpp  RoundedRectangleShape.hpp  casting.hpp  circle.cpp  font.cpp  font_impl.hpp  font_resources.cpp  image.cpp  label.cpp  log_guard.hpp  rectangle.cpp  text.cpp  ui.cpp
src/resources/fonts/: inter_regular.c  roboto_regular.c
tests/: CMakeLists.txt  indents.cpp  layout.cpp  line.cpp  path.cpp  point.cpp  rect.cpp  round.cpp
