################################################################################
# Copyright (c) 2024 Vladislav Trifochkin
#
# This file is part of `griotte-lib`.
#
# Changelog:
#      2024.07.03 Initial version.
################################################################################
#add_subdirectory(glfw)
#add_subdirectory(plutovg)
#add_subdirectory(sdl2)
add_subdirectory(sfml)
